--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,6 +1,6 @@
-# Max Saves
+# Starting Saves
 # Each time a player falls into the void it gets counted until they reach the max amount of saves, If the player runs out of saves they simply die in the void.
-max_saves: "3"
+starting_saves: "3"
 
 # Saves Price
 # The price of each save the players buy.
